fixed broken CSS of linked pages

--- a/node_app/public/style.css
+++ b/node_app/public/style.css
@@ -29,6 +29,7 @@
 nav {
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
+  z-index: 5;
 }
 
 body {
